[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_agent"
version = "0.1.0"
description = "An AI agent for blockchain interactions."
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "requests",
    "pydantic"
]
